--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
             <div class="element-btn" data-type="object">
               {Objects} - Polygons
             </div>
-            <div class="element-btn" data-type="input-output">
-              &gt;Inputs/Outputs&lt;
-            </div>
+            <div class="element-btn" data-type="input">&gt;Inputs&lt;</div>
+            <div class="element-btn" data-type="output">&gt;Outputs&lt;</div>
           </div>
         </div>
 
