feat: properties panel

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         <div class="mode-section">
           <h3>Actions</h3>
           <div class="mode-buttons">
-            <div class="mode-btn" onclick="saveProject()">Save Project</div>
-            <div class="mode-btn" onclick="loadProject()">Load Project</div>
-            <div class="mode-btn" onclick="clearCanvas()">Clear Canvas</div>
+            <div class="mode-btn" id="saveBtn">Save Project</div>
+            <div class="mode-btn" id="loadBtn">Load Project</div>
+            <div class="mode-btn" id="clearBtn">Clear Canvas</div>
           </div>
         </div>
       </div>
