feat: custom dropdowns

--- a/index.html
+++ b/index.html
@@ -82,6 +82,19 @@
             </label>
           </div>
         </div>
+
+        <div id="dropdowns">
+          <div id="dropdownTemplate" class="dropdown">
+            <div class="customDropdown" data-selected="Option #1">
+              <span class="propLabel">Dropdown</span>
+              <div class="propDrop" name="template">
+                <div class="propOpt">Option #1</div>
+                <div class="propOpt">Option #2</div>
+                <div class="propOpt">Option #3</div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
