fix: context menu (#9)

--- a/index.html
+++ b/index.html
@@ -99,12 +99,10 @@
     </div>
 
     <div class="context-menu" id="contextMenu">
-      <div class="context-menu-item" onclick="editElement()">Edit</div>
-      <div class="context-menu-item" onclick="duplicateElement()">
-        Duplicate
-      </div>
+      <div class="context-menu-item" id="editBtn">Edit</div>
+      <div class="context-menu-item" id="duplicateBtn">Duplicate</div>
       <div class="context-menu-separator"></div>
-      <div class="context-menu-item" onclick="deleteElement()">Delete</div>
+      <div class="context-menu-item" id="deleteBtn">Delete</div>
     </div>
 
     <script src="/src/customHTML/dropdown.ts"></script>
