fix: zoom (closed #9)

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 
       <div class="canvas-container">
         <div class="controls">
-          <div class="control-btn" onclick="zoomIn()">Zoom In</div>
-          <div class="control-btn" onclick="zoomOut()">Zoom Out</div>
-          <div class="control-btn" onclick="resetView()">Reset View</div>
+          <div class="control-btn" id="zoomInBtn">Zoom In</div>
+          <div class="control-btn" id="zoomOutBtn">Zoom Out</div>
+          <div class="control-btn" id="resetViewBtn">Reset View</div>
         </div>
 
         <div class="canvas" id="canvas"></div>
