fix: connection in one go (closes #14, #8)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <h3>Interaction Mode</h3>
           <div class="mode-buttons">
             <div class="mode-btn active" data-mode="create">Create / Child</div>
-            <div class="mode-btn" data-mode="connection">Connection</div>
+            <div class="mode-btn" data-mode="connect">Connection</div>
             <div class="mode-btn" data-mode="move">Movement</div>
             <div class="mode-btn" data-mode="edit">Edit</div>
           </div>
