feat: basic layout

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 
       <div class="canvas-container">
         <div class="controls">
+          <div class="control-btn" id="layoutBtn">Auto Layout</div>
+          <div class="control-btn" id="stopLayoutBtn">Manual Layout</div>
           <div class="control-btn" id="zoomInBtn">Zoom In</div>
           <div class="control-btn" id="zoomOutBtn">Zoom Out</div>
           <div class="control-btn" id="resetViewBtn">Reset View</div>
