feat: centralized input field management

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 type="text"
                 name="template"
                 class="propInput"
-                placeholder="[no element selected]"
+                placeholder="[enter value here]"
               />
             </label>
           </div>
