refact: style adjustment

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles/bars.css" />
     <link rel="stylesheet" href="./styles/elements.css" />
     <link rel="stylesheet" href="./styles/connections.css" />
+    <link rel="stylesheet" href="./styles/popup.css" />
   </head>
   <body>
     <div class="container">
@@ -189,6 +190,17 @@
 
         <span class="element-text"></span>
         <input type="text" class="element-input" />
+      </div>
+    </div>
+
+    <div id="popup">
+      <div class="popupHeader">
+        <span class="popupTitle">Action Blocked</span>
+        <button class="closeBtn">&times;</button>
+      </div>
+      <div class="popupBody">
+        <div class="message"></div>
+        <div class="description"></div>
       </div>
     </div>
 
