feat: all 6 modes

--- a/index.html
+++ b/index.html
@@ -100,20 +100,6 @@
               />
             </svg>
           </div>
-          <div class="topbarBtn" data-create="connection">
-            <svg
-              width="30"
-              height="30"
-              viewBox="0 0 30 30"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M3.75 0C5.82107 0 7.5 1.67893 7.5 3.75C7.5 4.08483 7.45049 4.40791 7.36816 4.7168L25.2795 22.6282C25.5892 22.5454 25.9143 22.5 26.25 22.5C28.3211 22.5 30 24.1789 30 26.25C30 28.3211 28.3211 30 26.25 30C24.1789 30 22.5 28.3211 22.5 26.25C22.5 25.9143 22.5454 25.5892 22.6282 25.2795L4.7168 7.36816C4.40791 7.45049 4.08483 7.5 3.75 7.5C1.67893 7.5 0 5.82107 0 3.75C0 1.67893 1.67893 0 3.75 0Z"
-                fill="#81E0FF"
-              />
-            </svg>
-          </div>
         </div>
       </div>
       <div id="modeButtons" class="topbarButtons">
@@ -143,6 +129,36 @@
               xmlns="http://www.w3.org/2000/svg"
             >
               <path d="M25.5 3H0.5" stroke="#A70000" stroke-width="4.57742" />
+            </svg>
+          </div>
+          <div class="topbarBtn" data-mode="connect">
+            <svg
+              width="30"
+              height="30"
+              viewBox="0 0 30 30"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M3.75 0C5.82107 0 7.5 1.67893 7.5 3.75C7.5 4.08483 7.45049 4.40791 7.36816 4.7168L25.2795 22.6282C25.5892 22.5454 25.9143 22.5 26.25 22.5C28.3211 22.5 30 24.1789 30 26.25C30 28.3211 28.3211 30 26.25 30C24.1789 30 22.5 28.3211 22.5 26.25C22.5 25.9143 22.5454 25.5892 22.6282 25.2795L4.7168 7.36816C4.40791 7.45049 4.08483 7.5 3.75 7.5C1.67893 7.5 0 5.82107 0 3.75C0 1.67893 1.67893 0 3.75 0Z"
+                fill="#81E0FF"
+              />
+            </svg>
+          </div>
+          <div class="hidden danger topbarBtn" data-mode="disconnect">
+            <svg
+              width="30"
+              height="30"
+              viewBox="0 0 30 30"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M3.75 0C5.82107 0 7.5 1.67893 7.5 3.75C7.5 4.08483 7.45049 4.40791 7.36816 4.7168L14.4775 11.8262L16.5557 7.58398L19.6182 9.08301L17.1748 14.0723L22.249 16.5566L21.249 18.5977L25.2793 22.6279C25.5889 22.5452 25.9143 22.5 26.25 22.5C28.3211 22.5 30 24.1789 30 26.25C30 28.3211 28.3211 30 26.25 30C24.1789 30 22.5 28.3211 22.5 26.25C22.5 25.9143 22.5452 25.5889 22.6279 25.2793L15.2832 17.9346L13.1914 22.208L10.1299 20.709L12.6143 15.6348L7.625 13.1924L8.58301 11.2344L4.7168 7.36816C4.40791 7.45049 4.08483 7.5 3.75 7.5C1.67893 7.5 0 5.82107 0 3.75C0 1.67893 1.67893 0 3.75 0ZM14.333 13.2129L9.44336 10.8184L8.3623 13.0283L13.252 15.4219L10.8193 20.3896L13.0283 21.4717L15.4609 16.5039L20.4277 18.9355L21.5098 16.7266L16.543 14.2949L18.9365 9.40625L16.7266 8.32422L14.333 13.2129Z"
+                fill="#A70000"
+              />
             </svg>
           </div>
           <div class="topbarBtn" data-mode="move">
@@ -230,7 +246,7 @@
       <div id="appearanceButtons" class="last topbarButtons">
         <h2>Appearance</h2>
         <div class="buttonSet">
-          <div class="active toggle topbarBtn" data-appearance="autoLayout">
+          <div class="active toggle topbarBtn" data-appearance="layout">
             <svg
               width="34"
               height="34"
