--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="./styles/elements.css" />
     <link rel="stylesheet" href="./styles/connections.css" />
     <link rel="stylesheet" href="./styles/popup.css" />
-    <!-- <link
+    <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Belanosima&display=swap"
-    /> -->
+    />
   </head>
   <body>
     <div class="hidden" id="contextMenu">
